--- a/activity.html
+++ b/activity.html
@@ -51,7 +51,7 @@
         .slider-container {
             position: relative;
             width: 100%;
-            height: 50vh; /* เปลี่ยนให้แบนเนอร์สูงแค่ 50% ของความสูงหน้าจอ */
+            height: 60vh; /* เปลี่ยนให้แบนเนอร์สูงแค่ 50% ของความสูงหน้าจอ */
             overflow: hidden;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
              z-index: 1; /* กำหนดให้แบนเนอร์อยู่เบื้องหลังปุ่มเมนู */
@@ -65,7 +65,7 @@
 
         .slide {
             min-width: 100%; /* ทำให้แต่ละสไลด์เต็มหน้าจอ */
-            height: 50vh; /* ทำให้ภาพในแบนเนอร์มีความสูง 50% ของความสูงหน้าจอ */
+            height: 55vh; /* ทำให้ภาพในแบนเนอร์มีความสูง 50% ของความสูงหน้าจอ */
             background-size: cover;
             background-position: center;
         }
@@ -228,7 +228,7 @@
       <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://www.facebook.com/share/p/1BC3cxUed1/">
         <img src="image/activity1.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="400" height="400" role="img">
         <div class="col-lg-8">
-        <h4 class="mb-0">13-22 ธ.ค.2567 คณาจารย์และนักศึกษา สาขาวิชาเทคโนโลยีมัลติมีเดีย มทร.สุวรรณภูมิ ศูนย์พระนครศรีอยุธยา หันตรา ได้นำเสนอผลงานของสาขาวิชา ใน Theme : Digital Heritage มรดกทางวัฒนธรรม สู่นวัตกรรมดิจิทัล ในงานยอยศยิ่งฟ้า อยุธยามรดกโลก ในบูทจัดแสดงของมหาวิทยาลัยเทคโนโลยีราชมงคลสุวรรณภูมิ โดยหด้รับความสนใจจากผู้มาเที่ยวชมงาน</h4>
+        <h4 class="mb-0">สาขาวิชาเทคโนโลยีมัลติมีเดีย มทร.สุวรรณภูมิ ศูนย์พระนครศรีอยุธยา หันตรา ได้นำเสนอผลงานของสาขาวิชา ใน Theme : Digital Heritage มรดกทางวัฒนธรรม สู่นวัตกรรมดิจิทัล ในงานยอยศยิ่งฟ้า อยุธยามรดกโลก</h4>
         </div>
       </a>
     </li>
